# corp-pdf-toolkit

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  README.md  anonymize.py  pdf2md.py  pdf_utils.py  pyproject.toml
.claude/rules/: python-env.md  testing.md
tasks/: lessons.md  todo.md
tests/: test_api_keys.py
