[project]
name = "corporate-pdf-toolkit"
version = "0.4.0"
description = "CLI tools for corporate PDF processing: text extraction to Markdown and anonymization via local Ollama LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10.0",
    "httpx>=0.26.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
